--- a/style.css
+++ b/style.css
@@ -13,7 +13,62 @@ body{
 }
 
 .light{
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 300;
     color: #b3b3b3;
+    text-align: center;
+    padding-top: 40px;
+}
+
+.bold{
+    font-size: 20px;
+    font-weight: 500;
+    color: #333;
+    /* font-style: italic; */
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.detail{
+        font-size: 10px;
+        font-weight: 400;
+        color: #b3b3b3;
+        /* font-style: italic; */
+        text-align: center;
+        width: 27%;
+        margin: auto;
+        margin-bottom: 30px;
+}
+
+.container{
+    margin: auto;
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: "card1 card2 card4"
+                         "card1 card3 card4";
+}
+
+.card1{
+    grid-area: card1;
+    padding: 20px 0;
+    background-color: skyblue;
+}
+
+.card2{
+    grid-area: card2;
+    padding: 20px 0;
+    background-color: salmon;
+}
+
+.card3{
+    grid-area: card3;
+    padding: 20px 0;
+    background-color: seagreen;
+}
+
+.card4{
+    grid-area: card4;
+    background-color: sandybrown;
 }
